snake-app/src/global.css
:root {
  --screen-green: rgb(126, 189, 141);
  --dark-hole-charcoal: rgba(35, 35, 35, 0.832);
  --width: 75vw;
  --columns: 25;
  --rows: 15;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

body {
  justify-content: center;
  display: flex;
  background-color: var(--screen-green)

}

.screen {
  width: var(--width);
  height: calc(var(--width) * var(--rows) / var(--columns));
  display: grid;
  grid-template-columns: repeat(var(--columns), 1fr);
}

.scoreboard {
  width: var(--width);
  height: calc(var(--width) / var(--columns) * 2);
  display: grid;
  grid-template-columns: .5fr repeat(calc(var(--columns) - 1), 1fr) .5fr;
}

.menu-option {
  width: var(--width);
  height: calc(var(--width) / 8);
  display: grid;
  grid-template-columns: repeat(80, auto);
}

.menu-option:hover .posi-space {
  background-color: transparent;
}

/* .menu-option:hover .negi-space {
  background-color: var(--dark-hole-charcoal);
} */

/* .menu-tile-8 {
  width: calc(var(--width) / 80 / 8);
  display: grid;
  grid-template-columns: repeat(8, 1fr);
  grid-template-rows: repeat(10, 1fr);
  grid-column: span 8;
}

.menu-tile-6 {
  width: calc(var(--width) / 80 / 6);
  display: grid;
  grid-template-columns: repeat(6, 1fr);
  grid-template-rows: repeat(10, 1fr);
  grid-column: span 6;
} */

.menu-tile {
  display: grid;
  grid-template-rows: repeat(10, 1fr);
}

.pixel {
  width: calc(var(--width) / 80);
}

.marquee-piece {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(8, 1fr);
}

.tile {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-template-rows: repeat(4, 1fr);
}

.menu-option:hover .negi-space,
.posi-space,
.horizontal .scl,
.horizontal .h,
.vertical .scl, 
.vertical .v, 
.head .scl,
.NW1 .scl,
.NW1 .h,
.NW1 .v,
.NE1 .scl,
.NE1 .v,
.SW1 .scl,
.SW1 .h,
.SE1 .scl,
.sw-border1 .swb1,
.s-border1 .sb1,
.se-border1 .seb1,
.ne-border1 .neb1,
.e-border1 .eb1,
.m,
.zero .n0,
.one .n1,
.two .n2,
.three .n3,
.four .n4,
.five .n5,
.six .n6,
.seven .n7,
.eight .n8,
.nine .n9,
.nw-border .nwb,
.ne-border .neb,
.sw-border .swb,
.se-border .seb,
.left-border .lb,
.right-border .rb,
.upper-border .ub,
.bottom-border .bb,
.snake-right .right,
.snake-down .down,
.snake-left .left,
.snake-up .up,
.right-head .r-h, .right-tail .r-t,
.left-head .l-h, .left-tail .l-t,
.up-head .u-h, .up-tail .u-t,
.down-head .d-h, .down-tail .d-t,
.northeast .n-e,
.northwest .n-w,
.southeast .s-e,
.southwest .s-w,
.right-feed .r-f,
.left-feed .l-f,
.up-feed .u-f,
.down-feed .d-f,
.food .food-pixel,
.full .f,
.full-n-e .f-n-e,
.full-n-w .f-n-w,
.full-s-e .f-s-e,
.full-s-w .f-s-w,
.caterpillar1 .cp1,
.caterpillar2 .cp2,
.fish1 .fs1,
.fish2 .fs2,
.spider1 .sp1,
.spider2 .sp2,
.chameleon1 .cm1,
.chameleon2 .cm2 {
  background-color: var(--dark-hole-charcoal);
  border: .00001rem solid var(--screen-green);
}

.negi-space,
.erase-left .xl,
.erase-right .xr {
  background-color: transparent;
}

/* .pixel {
  background-color: black;
} */

